tp react con api rest

--- a/src/componentes/_Nav.scss
+++ b/src/componentes/_Nav.scss
@@ -6,6 +6,7 @@ nav{
     justify-content: space-around;
     flex-wrap: wrap;
     height: 120px;
+    width: 100%;
     h1{
         margin: 0;
         font-size: 40px;
