--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 .conteiner{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background-color: #dedddd;
 }
