--- a/src/componentes/_Footer.scss
+++ b/src/componentes/_Footer.scss
@@ -4,6 +4,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     .red{
         text-decoration: none;
         font-size: 50px;
